# Cource_Work_3

./: README.md  pyproject.toml
src/: account_operations.py  account_operations_json_keys.py  main.py  string_formatter.py
test_files/: test_account_operations.py  test_string_formatter.py
tests/: test_account_operations.py  test_string_formatter.py
