[tool.poetry]
name = "4 курсовая"
version = "0.1.0"
description = ""
authors = ["Churilov Evgeny <i@churilovevgeny.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
